Update link to Excel workshop material

--- a/all.html
+++ b/all.html
@@ -131,7 +131,7 @@
                   >
                 </li>
                 <li>
-                  <a href="https://ubc-library-rc.github.io/excel1/"
+                  <a href="https://ubc-library-rc.github.io/excel/"
                     >Working with data in Excel (two modules)<a
                   >
                 </li>
