added intro QGIS

--- a/index.html
+++ b/index.html
@@ -387,6 +387,27 @@
                     </p>
                   </div>
                 </li>
+                <li class="menu-item">
+                  <div class="menu-item-info">
+                    <h4 class="menu-item-name">
+                      <a
+                        href="https://ubc-library-rc.github.io/gis-intro-qgis/"
+                        target="_blank"
+                        >Map Production with QGIS</a
+                      >
+                    </h4>
+                    <span class="menu-item-price"
+                      ><a
+                        href="https://github.com/ubc-library-rc/gis-intro-qgis"
+                        target="_blank"
+                        >view in GitHub</a
+                      ></span
+                    >
+                    <p class="menu-item-description">
+                      Learn how to work with QGIS to publish a static map for an article or report.
+                    </p>
+                  </div>
+                </li>
               </ol>
             </div>
 
