added QGIS to the list of all workshops

--- a/all.html
+++ b/all.html
@@ -218,6 +218,12 @@
                     >Introduction to ArcGIS Pro</a
                   >
                 </li>
+                <li>
+                  <a
+                    href="https://ubc-library-rc.github.io/gis-intro-qgis/"
+                    >Map Production with QGIS</a
+                  >
+                </li>
               </ul>
             </div>
             <div id="rdm" class="menu-category">
