--- a/index.html
+++ b/index.html
@@ -411,7 +411,106 @@
               href="http://github.com/ubc-library-rc"
               >View full list of GitHub repositories</a
             >
-          </article>
+                  <div id="rdm" class="menu-category">
+          <h3 class="menu-category-name">
+            Research Data Management
+          </h3>
+          <ol class="menu-category-list">
+
+			<!-- first workshop item -->
+
+            <li class="menu-item">
+              <div class="menu-item-info">
+                <h4 class="menu-item-name">
+                  <a
+                    href="https://ubc-library-rc.github.io/rdm/content/01_file_naming.html"
+                    target="_blank"
+                    >File Naming</a
+                  >
+                </h4>
+                <span class="menu-item-price"
+                  ><a
+                    href="https://github.com/ubc-library-rc/rdm/"
+                    target="_blank"
+                    >view in GitHub</a
+                  ></span
+                >
+                <p class="menu-item-description">Optional description here</p>
+              </div>
+            </li>
+
+		<!-- second workshop item -->
+
+            <li class="menu-item">
+              <div class="menu-item-info">
+                <h4 class="menu-item-name">
+                  <a
+                    href="https://ubc-library-rc.github.io/rdm/content/02_file_formats.html"
+                    target="_blank"
+                    >File Formatting</a
+                  >
+                </h4>
+                <span class="menu-item-price"
+                  ><a
+                    href="https://github.com/ubc-library-rc/rdm/"
+                    target="_blank"
+                    >view in GitHub</a
+                  ></span
+                >
+                <p class="menu-item-description">Optional description here</p>
+              </div>
+            </li>
+            
+            <!-- third workshop item -->
+
+            <li class="menu-item">
+              <div class="menu-item-info">
+                <h4 class="menu-item-name">
+                  <a
+                    href="https://ubc-library-rc.github.io/rdm/content/03_create_readme.html"
+                    target="_blank"
+                    >Create a README file</a
+                  >
+                </h4>
+                <span class="menu-item-price"
+                  ><a
+                    href="https://github.com/ubc-library-rc/rdm/"
+                    target="_blank"
+                    >view in GitHub</a
+                  ></span
+                >
+                <p class="menu-item-description">Optional description here</p>
+              </div>
+            </li>
+			
+			 <!-- fourth workshop item -->
+
+            <li class="menu-item">
+              <div class="menu-item-info">
+                <h4 class="menu-item-name">
+                  <a
+                    href="https://ubc-library-rc.github.io/rdm/content/04_directory_structures.html"
+                    target="_blank"
+                    >Directories Structure</a
+                  >
+                </h4>
+                <span class="menu-item-price"
+                  ><a
+                    href="https://github.com/ubc-library-rc/rdm/"
+                    target="_blank"
+                    >view in GitHub</a
+                  ></span
+                >
+                <p class="menu-item-description">Optional description here</p>
+              </div>
+            </li>
+			
+			<!-- Repeate above block for each workshop item -->
+
+          </ol>
+        </div>
+		
+		</article>
         </section>
       </div>
     </div>
