--- a/all.html
+++ b/all.html
@@ -241,11 +241,20 @@
               <h3 class="menu-category-name">Research Data Management</h3>
               <ul>
                 <li>
-                  <a
-                    href="https://research-commons-2019.sites.olt.ubc.ca/best-practices-in-research-data-management/"
-                    >Best practices in Research Data Management</a
-                  >
-                </li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/01_file_naming.html"> File Naming</a>                                
+		</li>
+
+		<li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/02_file_formats.html"> File Formats</a>                   
+		</li>
+
+		<li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/03_create_readme.html"> Creating a README file</a>                   
+		</li>
+
+		<li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/04_directory_structures.html"> Directories Structure</a>                   
+		</li>
                 <li>
                   <a href="https://ubc-library-rc.github.io/intro-metadata/"
                     >Metadata basics: describing research data</a
