--- a/index.html
+++ b/index.html
@@ -405,12 +405,7 @@
               </ol>
             </div>
 
-            <a
-              id="btn-view-full-menu"
-              class="btn-view-full-menu"
-              href="http://github.com/ubc-library-rc"
-              >View full list of GitHub repositories</a
-            >
+            
                   <div id="rdm" class="menu-category">
           <h3 class="menu-category-name">
             Research Data Management
@@ -435,7 +430,7 @@
                     >view in GitHub</a
                   ></span
                 >
-                <p class="menu-item-description">Optional description here</p>
+                <p class="menu-item-description">Learn how to name your data files</p>
               </div>
             </li>
 
@@ -457,7 +452,7 @@
                     >view in GitHub</a
                   ></span
                 >
-                <p class="menu-item-description">Optional description here</p>
+                <p class="menu-item-description">Learn what data formats to use</p>
               </div>
             </li>
             
@@ -479,7 +474,7 @@
                     >view in GitHub</a
                   ></span
                 >
-                <p class="menu-item-description">Optional description here</p>
+                <p class="menu-item-description">Learn how to create good README files</p>
               </div>
             </li>
 			
@@ -501,12 +496,18 @@
                     >view in GitHub</a
                   ></span
                 >
-                <p class="menu-item-description">Optional description here</p>
+                <p class="menu-item-description">Learn to organize your data folders well</p>
               </div>
             </li>
 			
 			<!-- Repeate above block for each workshop item -->
 
+		  <a
+              id="btn-view-full-menu"
+              class="btn-view-full-menu"
+              href="http://github.com/ubc-library-rc"
+              >View full list of GitHub repositories</a
+            >
           </ol>
         </div>
 		
