--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             
                   <div id="rdm" class="menu-category">
           <h3 class="menu-category-name">
-            Research Data Management
+            Research Data Management (RDM)
           </h3>
           <ol class="menu-category-list">
 
