--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                 <li class="menu-navigation-list-item">
                   <a href="#gis">Geographic information systems (GIS)</a>
                 </li>
+		      <li class="menu-navigation-list-item">
+                  <a href="#rdm">Research Data Management (RDM)</a>
+                </li>
               </ul>
               <br />
               <p>
