Fix broken link

--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
                   <div class="menu-item-info">
                     <h4 class="menu-item-name">
                       <a
-                        href="https://ubc-library-rc.github.io/intro-data-viz/"
+                        href="https://ubc-library-rc.github.io/tableau-intro/"
                         target="_blank"
                         >Intro to data viz with Tableau</a
                       >
                     </h4>
                     <span class="menu-item-price"
                       ><a
-                        href="https://github.com/ubc-library-rc/intro-data-viz/"
+                        href="https://github.com/ubc-library-rc/tableau-intro/"
                         target="_blank"
                         >view in GitHub</a
                       ></span
