Fix broken link

--- a/all.html
+++ b/all.html
@@ -152,7 +152,7 @@
                   >
                 </li>
                 <li>
-                  <a href="https://ubc-library-rc.github.io/intro-data-viz/"
+                  <a href="https://ubc-library-rc.github.io/tableau-intro/"
                     >Intro to data visualization with Tableau</a
                   >
                 </li>
