--- a/all.html
+++ b/all.html
@@ -260,6 +260,33 @@
                     >Metadata basics: describing research data</a
                   >
                 </li>
+		      
+		      
+ 		<li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/05-1_Basic_Deposit.html"
+                    >Deposit in UBC Dataverse Collection: Basic Deposit</a
+                  >
+                </li>
+
+
+ 		<li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/05-2_Advanced_Deposit.html"
+                    >Deposit in UBC Dataverse Collection: Advanced Deposit</a
+                  >
+                </li>
+
+
+ 		<li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/05-3_Admin_Deposit.html"
+                    >Deposit in UBC Dataverse Collection: Admin Deposit</a
+                  >
+                </li>
+
+ 		<li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/05-4_Geomatics_Deposit.html"
+                    >Deposit in UBC Dataverse Collection: Geomatics Deposit</a
+                  >
+                </li>
                 <li>
                   <a href="https://osf.io/ht9qn/">Introduction to the OSF</a>
                 </li>
