added more GIS workshops

--- a/all.html
+++ b/all.html
@@ -176,7 +176,12 @@
                 </li>
                 <li>
                   <a href="https://ubc-library-rc.github.io/intro-AGOL/"
-                    >Intro to ArcGIS Online and Story Maps</a
+                    >Intro to ArcGIS Online and Storymaps</a
+                  >
+                </li>
+                <li>
+                  <a href="https://ubc-library-rc.github.io/gis-ArcGIS-Storymap/"
+                    >Diving Deeper with ArcGIS Online Storymaps</a
                   >
                 </li>
                 <li>
@@ -222,6 +227,12 @@
                   <a
                     href="https://ubc-library-rc.github.io/gis-intro-qgis/"
                     >Map Production with QGIS</a
+                  >
+                </li>
+                <li>
+                  <a
+                    href="https://ubc-library-rc.github.io/intro-mapbox/"
+                    >Introduction to MapBox</a
                   >
                 </li>
               </ul>
