--- a/index.html
+++ b/index.html
@@ -264,7 +264,9 @@
                       ></span
                     >
                     <p class="menu-item-description">
-                      A two-part series for Excel users who want to deepen their skills and work more effectively with data in this ubiquitous software. 
+                      A two-part series for Excel users who want to deepen their
+                      skills and work more effectively with data in this
+                      ubiquitous software.
                     </p>
                   </div>
                 </li>
@@ -285,7 +287,10 @@
                       ></span
                     >
                     <p class="menu-item-description">
-					An overview of the principles and practices of data visualization. This is a general guide on how to communicate ideas through plots in a clear and effective way. 
+                      An overview of the principles and practices of data
+                      visualization. This is a general guide on how to
+                      communicate ideas through plots in a clear and effective
+                      way.
                     </p>
                   </div>
                 </li>
@@ -322,24 +327,22 @@
                   <div class="menu-item-info">
                     <h4 class="menu-item-name">
                       <a
-                        href="https://ubc-library-rc.github.io/intro-AGOL/"
+                        href="https://ubc-library-rc.github.io/intro-mapbox/"
                         target="_blank"
-                        >Visualizing data in ArcGIS Online</a
+                        >Designing Web Maps with MapBox</a
                       >
                     </h4>
                     <span class="menu-item-price"
                       ><a
-                        href="https://github.com/ubc-library-rc/intro-AGOL/"
+                        href="https://github.com/ubc-library-rc/intro-mapbox/"
                         target="_blank"
                         >view in GitHub</a
                       ></span
                     >
                     <p class="menu-item-description">
-                      Introduces complete beginners to the ArcGIS Online
-                      platform and tools. This workshop is intended for those
-                      unfamiliar with GIS software or code but who want to be
-                      able to create a map, add their own data, and configure a
-                      Story Map.
+                      This workshop is intended for anyone with a basic
+                      understanding of web mapping who wishes to expand their
+                      skillset and design more customizable maps.
                     </p>
                   </div>
                 </li>
@@ -347,21 +350,23 @@
                   <div class="menu-item-info">
                     <h4 class="menu-item-name">
                       <a
-                        href="https://ubc-lib-geo.github.io/Data-Normalization-Classification/"
+                        href="https://ubc-library-rc.github.io/qgis-walkability/"
                         target="_blank"
-                        >GIS Data Normalization and Classification</a
+                        >Spatial Network Analysis with QGIS</a
                       >
                     </h4>
                     <span class="menu-item-price"
                       ><a
-                        href="https://github.com/ubc-lib-geo/Data-Normalization-Classification"
+                        href="https://github.com/ubc-library-rc/qgis-walkability/"
                         target="_blank"
                         >view in GitHub</a
                       ></span
                     >
                     <p class="menu-item-description">
-                      Investigates how data normalization impacts the way we
-                      perceive patterns in a geographic dataset.
+                      In this workshop you’ll learn how to apply spatial
+                      analysis tools in QGIS to estimate and visualize a
+                      walkability index based on open data from the City of
+                      Vancouver.
                     </p>
                   </div>
                 </li>
@@ -404,7 +409,8 @@
                       ></span
                     >
                     <p class="menu-item-description">
-                      Learn how to work with QGIS to publish a static map for an article or report.
+                      Learn how to work with QGIS to publish a static map for an
+                      article or report.
                     </p>
                   </div>
                 </li>
@@ -434,7 +440,7 @@
       _gaq.push(["_setAccount", "UA-40704740-1"]);
       _gaq.push(["_trackPageview"]);
 
-      (function() {
+      (function () {
         var ga = document.createElement("script");
         ga.type = "text/javascript";
         ga.async = true;
