--- a/index.html
+++ b/index.html
@@ -525,6 +525,30 @@
               </div>
             </li>
 		  </div>	  
+
+
+		    <!-- Sixth workshop item -->
+
+            <li class="menu-item">
+              <div class="menu-item-info">
+                <h4 class="menu-item-name">
+                  <a
+                    href="https://ubc-library-rc.github.io/rdm/content/06_Data_Management_Plan.html"
+                    target="_blank"
+                    >Data Management Plans (DMPs)</a
+                  >
+                </h4>
+                <span class="menu-item-price"
+                  ><a
+                    href="https://github.com/ubc-library-rc/rdm/"
+                    target="_blank"
+                    >view in GitHub</a
+                  ></span
+                >
+                <p class="menu-item-description">Learn how to create Data Management Plans</p>
+              </div>
+            </li>
+		  </div>	
 		  
 		  
 			
