--- a/all.html
+++ b/all.html
@@ -176,12 +176,12 @@
                 </li>
                 <li>
                   <a href="https://ubc-library-rc.github.io/intro-AGOL/"
-                    >Intro to ArcGIS Online and Storymaps</a
+                    >Intro to ArcGIS Online and StoryMaps</a
                   >
                 </li>
                 <li>
                   <a href="https://ubc-library-rc.github.io/gis-ArcGIS-Storymap/"
-                    >Diving Deeper with ArcGIS Online Storymaps</a
+                    >Diving Deeper with ArcGIS Online StoryMaps</a
                   >
                 </li>
                 <li>
