Update all.html to include machine learning workshops

--- a/all.html
+++ b/all.html
@@ -94,7 +94,7 @@
                 Digital Toolkit: survey sessions on tools in Digital Scholarship
               </h3>
               <ul>
-                <li><a href="https://ubc-library-rc.github.io/digital-exhibits-survey/">Survey of Digital Exhibit tools"</a></li>
+                <li><a href="https://ubc-library-rc.github.io/digital-exhibits-survey/">Survey of Digital Exhibit tools</a></li>
                 <li><a href="https://ubc-library-rc.github.io/intro-wax/">Introduction to Minimal Digital Exhibits with Wax</a></li>
                 <li><a href="https://github.com/ubc-library-rc/intro-omeka">Building Digital Exhibits with Omeka</a></li>
                 <li><a href="https://ubc-library-rc.github.io/intro-jupyter/">Introduction to Jupyter Notebooks</a></li>
@@ -115,7 +115,10 @@
           </h3>
           <ul>
             <li><a href="https://github.com/ubc-library-rc/intro-blockchain-research">Introduction to Blockchain research skills</a></li>
-        </ul>
+      	    <li><a href="https://ubc-library-rc.github.io/ml-regression/">Introduction to Machine Learning: Regression</a></li>
+	    <li><a href="https://ubc-library-rc.github.io/ml-classification-clustering/">Introduction to Machine Learning: Classification and Clustering</a></li>
+            <li><a href="https://ubc-library-rc.github.io/ml-neural-networks/">Introduction to Machine Learning: Neural Networks</a></li>
+	  </ul>
       </div>
             <div id="data" class="menu-category">
               <h3 class="menu-category-name">
