--- a/all.html
+++ b/all.html
@@ -341,7 +341,19 @@
                     >Citation Management using Mendeley (Intermediate)</a
                   >
                 </li>
-            
+		  <li>
+                  <a href="https://researchcommons.library.ubc.ca/jurism/"
+                    >Citation Management for Researchers Using Multilingual
+                    Materials, Part 1</a
+                  >
+                </li>
+                <li>
+                  <a href="https://researchcommons.library.ubc.ca/jurism2/"
+                    >Citation Management for Researchers Using Multilingual
+                    Materials, Part 2</a
+                  >
+                </li>
+
               </ul>
             </div>
           </article>
