--- a/index.html
+++ b/index.html
@@ -545,7 +545,27 @@
             </li>
 		  </div>	
 		  
-		  
+	 <!-- seventh workshop item -->
+
+            <li class="menu-item">
+              <div class="menu-item-info">
+                <h4 class="menu-item-name">
+                  <a
+                    href="https://ubc-library-rc.github.io/rdm/content/07_data_dictionary.html"
+                    target="_blank"
+                    >Create a Data Dictionary</a
+                  >
+                </h4>
+                <span class="menu-item-price"
+                  ><a
+                    href="https://github.com/ubc-library-rc/rdm/"
+                    target="_blank"
+                    >view in GitHub</a
+                  ></span
+                >
+                <p class="menu-item-description">Learn how to create a good data dictionary or a code book files</p>
+              </div>
+            </li>	  
 			
 			<!-- Repeate above block for each workshop item -->
 	<div>
