--- a/all.html
+++ b/all.html
@@ -266,6 +266,10 @@
                   <a href="https://ubc-library-rc.github.io/rdm/content/03_create_readme.html"> Creating a README file</a>                   
 		</li>
 
+		 <li>
+                  <a href="https://ubc-library-rc.github.io/rdm/content/07_data_dictionary.html"> Creating a Data Dictionary</a>                   
+		</li>
+
 		<li>
                   <a href="https://ubc-library-rc.github.io/rdm/content/04_directory_structures.html"> Directories Structure</a>                   
 		</li>
