--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                     >view in GitHub</a
                   ></span
                 >
-                <p class="menu-item-description">Learn how to create a good data dictionary or a code book files</p>
+                <p class="menu-item-description">Learn how to create a good data dictionary or a code book </p>
               </div>
             </li>	
 		  
